--- a/templates/shared/base_divider_site25.ejs
+++ b/templates/shared/base_divider_site25.ejs
@@ -1,23 +1,18 @@
 
-<% if (typeof sectionName === 'undefined') { 
-  sectionName = ''; 
-} 
+<%
+  sectionName     = (typeof sectionName     !== 'undefined') ? sectionName     : 'blankHXS';
+  topSpacing      = (typeof topSpacing      !== 'undefined') ? topSpacing      : 'blankHXS';
+  dividerSpacing  = (typeof dividerSpacing  !== 'undefined') ? dividerSpacing  : 'blankHXS';
+  bottomSpacing   = (typeof bottomSpacing   !== 'undefined') ? bottomSpacing   : 'blankHXS';
 %>
+<div class="wrapperL">
+  <div class="<%= topSpacing %> <%= dividerSpacing %>"></div>
 
-    <div class="wrapperL">
-      <div class="blankHXS"></div>
+  <div class="Grid Grid--gutters Grid--cols-3 Grid--center u-textCenter">
+    <div class="Grid-cell"><hr></div>
+    <div class="Grid-cell"><h6 class="Grey500"><%= sectionName %></h6></div>
+    <div class="Grid-cell"><hr></div>
+  </div>
 
-      <div class="Grid Grid--gutters Grid--cols-3 Grid--center u-textCenter">
-        <div class="Grid-cell">
-          <hr>
-        </div>
-        <div class="Grid-cell">
-          <h6 class="Grey500"><%= sectionName %></h6>
-        </div>
-        <div class="Grid-cell">
-          <hr>
-        </div>
-      </div>
-      <div class="blankHXS"></div>
-
-    </div>
+  <div class="<%= bottomSpacing %> <%= dividerSpacing %>"></div>
+</div>
