--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -79,13 +79,18 @@
       </div>
     </div>
     <div class="spacingLarge"></div>
-
     <%- include(`${templatePath}/shared/comp_card25`, {
-      // sectionName:'Case Studies',
-      // topSpacing:'spacingMedium',
-      // bottomSpacing:'spacingXLarge',
-      // dividerSpacing:''
+      cardMeta:'Business Facing Partner Portal • Q3 2025',
+      cardTitle:'BabyQuip Inventory Management',
+      cardDescription:'Scaled inventory from hobbyist QPs to power users with a unified editing surface.',
+      cardList:'→ 3× faster edits for high-volume providers',
+      ctaType:'buttonPrimary'
+
+
       }) %>
+    <div class="spacingLarge"></div>
+
+
     <div class="wrapper">
       <div class="card25CardMargin">
         <div class="Grid Grid--gutters Grid--cols-2 Grid--top card25">
@@ -97,46 +102,36 @@
               <h2 class="card25CardTitle">BabyQuip Inventory Management</h2>
               <h5 class="card25CardDescription">Scaled inventory from hobbyist QPs to power users with a unified editing surface.</h5>
 
-
-              <div class="spacingMedium displayTablet"></div>
-              <div class="spacingMedium displayDesktop"></div>
-
               <h5 class="card25CardList">→ 3× faster edits for high-volume providers</h5>
 
-              <div class="spacingLarge displayDesktop"></div>
+              <div class="">
+                <!-- Trigger 1 -->
 
-              <div class="spacingLarge displayTablet"></div>
+                <a href="" class="open-modal alignBottom" data-modal="modal1">
+                  <button class="buttonMedium buttonPrimary">View Case Study</button>
+                </a>
+                <!-- Modal 1 -->
+                <div id="modal1" class="modal hidden">
+                  <span class="modal-close">
+                    <img class="iconXforModal" src="../../icon/delete.svg" alt="×">
+                  </span>
+                  <div class="modal-content wrapperL">
 
+                    <div class="column element">
 
-
-              <!-- Trigger 1 -->
-              <a href="" class="open-modal" data-modal="modal1">
-                <button class="buttonMedium buttonPrimary">View Case Study</button>
-              </a>
-              <!-- Modal 1 -->
-              <div id="modal1" class="modal hidden">
-                <span class="modal-close">
-                  <img class="iconXforModal" src="../../icon/delete.svg" alt="×">
-                </span>
-                <div class="modal-content wrapperL">
-
-                  <div class="column element">
-
-                    <div class="containerCopy">
-                      <div class="ClickandCopy">Email for access.</div>
-                      <div class="copy-text">
-                        <input id="copyEmail" name="copyEmail" type="text" class="text" value="hello.vicky.w@gmail.com" readonly>
-                        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg">
-                        </button>
+                      <div class="containerCopy">
+                        <div class="ClickandCopy">Email for access.</div>
+                        <div class="copy-text">
+                          <input id="copyEmail" name="copyEmail" type="text" class="text" value="hello.vicky.w@gmail.com" readonly>
+                          <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg">
+                          </button>
+                        </div>
                       </div>
+                      <h5 class="textItalic">&#160; &#160; I’ll reply with a link within 24 hours.</h5>
                     </div>
-                    <h5 class="textItalic">&#160; &#160; I’ll reply with a link within 24 hours.</h5>
                   </div>
                 </div>
               </div>
-
-
-
             </div>
           </div>
           <div class="Grid-cell ">
@@ -165,39 +160,36 @@
 
 
 
-              <div class="spacingXLarge"></div>
 
+              <div class="card25-cta">
 
+                <!-- Trigger 1 -->
+                <a href="" class="open-modal" data-modal="modal2">
+                  <button class="buttonMedium buttonPrimary">View Case Study</button>
+                </a>
+                <!-- Modal 1 -->
+                <div id="modal2" class="modal hidden">
+                  <span class="modal-close">
+                    <img class="iconXforModal" src="../../icon/delete.svg" alt="×">
+                  </span>
+                  <div class="modal-content wrapperL">
 
+                    <div class="column element">
 
-
-              <!-- Trigger 1 -->
-              <a href="" class="open-modal" data-modal="modal2">
-                <button class="buttonMedium buttonPrimary">View Case Study</button>
-              </a>
-              <!-- Modal 1 -->
-              <div id="modal2" class="modal hidden">
-                <span class="modal-close">
-                  <img class="iconXforModal" src="../../icon/delete.svg" alt="×">
-                </span>
-                <div class="modal-content wrapperL">
-
-                  <div class="column element">
-
-                    <div class="containerCopy">
-                      <div class="ClickandCopy">Email for access.</div>
-                      <div class="copy-text">
-                        <input id="copyEmail" name="copyEmail" type="text" class="text" value="hello.vicky.w@gmail.com" readonly>
-                        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg">
-                        </button>
+                      <div class="containerCopy">
+                        <div class="ClickandCopy">Email for access.</div>
+                        <div class="copy-text">
+                          <input id="copyEmail" name="copyEmail" type="text" class="text" value="hello.vicky.w@gmail.com" readonly>
+                          <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg">
+                          </button>
+                        </div>
                       </div>
+                      <h5 class="textItalic">&#160; &#160; I’ll reply with a link within 24 hours.</h5>
                     </div>
-                    <h5 class="textItalic">&#160; &#160; I’ll reply with a link within 24 hours.</h5>
                   </div>
                 </div>
+
               </div>
-
-
 
             </div>
           </div>
