card layout final

--- a/templates/shared/comp_card25.ejs
+++ b/templates/shared/comp_card25.ejs
@@ -18,10 +18,10 @@
       <h5 class="card25CardDescription"><%= cardDescription %></h5>
 
       <h5 class="card25CardList"><%= cardList %></h5>
+      <div class="spacingLarge displayDesktop"></div>
+      <div class="spacingLarge displayTablet"></div>
 
-      <div class="spacingLarge"></div>
-
-
+      <div class="spacingSmall displayMobile"></div>
 
       <div class="">
         <!-- Trigger 1 -->
@@ -50,6 +50,7 @@
           </div>
         </div>
       </div>
+      <div class="spacingXSmall displayMobile"></div>
 
 
 
